--- a/src/components/sections/Categories.astro
+++ b/src/components/sections/Categories.astro
@@ -55,7 +55,7 @@ const categories = await getCategoriesByType(type);
         position: absolute;
         right: 0;
         bottom: 0;
-        background-image: url('categories/fog1.png');
+        background-image: url('categories/fog1.webp');
         background-size: 200% auto;
         background-position: 0 bottom;
         width: 100%;
@@ -73,7 +73,7 @@ const categories = await getCategoriesByType(type);
         position: absolute;
         right: 0;
         bottom: 0;
-        background-image: url('https://www.clicktorelease.com/blog/css3dclouds/cloud.png');
+        background-image: url('categories/cloud.webp');
         background-size: 200% auto;
         background-position: 0 bottom;
         width: 100%;
