--- a/src/components/sections/Hero.astro
+++ b/src/components/sections/Hero.astro
@@ -15,28 +15,28 @@ import Stars from '@components/Stars.astro'
     <Planet planet2 />
     <div class="absolute bottom-0 flex margin-auto max-w-3xl justify-between items-end">
       <div class="w-2/5 h-auto relative -ml-20 -mb-4 z-20">
-        <img src="hero/hero-left-ornament.webp" alt="ornamentos de la izquierda" class="left-ornament-shine z-30" />
-        <img src="hero/hero-left-ornament.webp" alt="ornamentos de la izquierda" class="left-ornament z-20 absolute top-0" />
+        <img src="hero/hero-left-ornament.webp" alt="ornamentos de la izquierda" class="left-ornament-shine z-30" width="264" height="393" />
+        <img src="hero/hero-left-ornament.webp" alt="ornamentos de la izquierda" class="left-ornament z-20 absolute top-0" width="264" height="393" />
       </div>
       <div class="w-2/5 h-auto relative -mb-4 -mr-20 z-20">
-        <img src="hero/hero-right-ornament.webp" alt="ornamentos de la derecha" class="right-ornament-shine z-30" />
-        <img src="hero/hero-right-ornament.webp" alt="ornamentos de la derecha" class="right-ornament z-20 absolute top-0" />
+        <img src="hero/hero-right-ornament.webp" alt="ornamentos de la derecha" class="right-ornament-shine z-30" width="264" height="194" />
+        <img src="hero/hero-right-ornament.webp" alt="ornamentos de la derecha" class="right-ornament z-20 absolute top-0" width="264" height="194" />
       </div>
     </div>
     <div class="absolute z-10 -m-12">
-      <img src="hero/magic-tree.webp" alt="árbol mágico" class="z-10 w-full h-auto mx-auto bottom-0 absolute blur-3xl" />
-      <img src="hero/magic-tree.webp" alt="árbol mágico" class="z-20 w-full h-auto mx-auto bottom-0" />
+      <img src="hero/magic-tree.webp" alt="árbol mágico" class="z-10 w-full h-auto mx-auto bottom-0 absolute blur-3xl" width="450" height="412" />
+      <img src="hero/magic-tree.webp" alt="árbol mágico" class="z-20 w-full h-auto mx-auto bottom-0" width="450" height="412" />
     </div>
     <div class="flex justify-between z-20 -mb-12 gap-12">
       <div class="relative w-48 flex">
-        <img src="hero/hero-left-book.webp" alt="Libro abierto en el centro de la imagen" class="left-book hidden md:block z-30 w-full h-auto mx-auto bottom-0" />
+        <img src="hero/hero-left-book.webp" alt="Libro abierto en el centro de la imagen" class="left-book hidden md:block z-30 w-full h-auto mx-auto bottom-0" width="192" height="138" />
       </div>
       <div class="relative w-80">
-        <img src="hero/hero-center-book.webp" alt="Libro abierto en el centro de la imagen" class="center-book z-20 w-full h-auto mx-auto bottom-0" />
-        <img src="hero/hero-center-book.webp" alt="Libro abierto en el centro de la imagen" class="center-book-2 -z-10 w-full top-0 h-auto mx-auto absolute bottom-0" />
+        <img src="hero/hero-center-book.webp" alt="Libro abierto en el centro de la imagen" class="center-book z-20 w-full h-auto mx-auto bottom-0" width="320" height="138" />
+        <img src="hero/hero-center-book.webp" alt="Libro abierto en el centro de la imagen" class="center-book-2 -z-10 w-full top-0 h-auto mx-auto absolute bottom-0"width="320" height="138" />
       </div>
       <div class="relative w-48 flex items-center pt-4">
-        <img src="hero/hero-right-book.webp" alt="Libro abierto en el centro de la imagen" class="right-book hidden md:block z-30 w-full h-auto mx-auto bottom-0" />
+        <img src="hero/hero-right-book.webp" alt="Libro abierto en el centro de la imagen" class="right-book hidden md:block z-30 w-full h-auto mx-auto bottom-0" width="192" height="81" />
       </div>
     </div>
     <div class="flex flex-col gap-4 items-center justify-center z-50 text-white">
