refactor: Add loading eager for images in category and story layouts

--- a/src/layouts/LayoutStory.astro
+++ b/src/layouts/LayoutStory.astro
@@ -86,6 +86,7 @@ const genre = category.title.toLowerCase().replace('cuentos de ', '')
         height={512}
         alt={title}
         sizes="100vw"
+        loading="eager"
       />
       <Breadcrumb breadcrumb={[{
         title: 'Cuentos interactivos',
