--- a/src/layouts/LayoutCategory.astro
+++ b/src/layouts/LayoutCategory.astro
@@ -84,6 +84,7 @@ console.log(Astro.site);
         height={512}
         alt={title}
         sizes="100vw"
+        loading="eager"
         class="peer-hover:scale-110 z-10 rounded-lg transition-transform"
       />
       <slot />
