--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -15,7 +15,7 @@ const canonical = new URL(Astro.url.pathname === '/' ? '' : Astro.url.pathname, 
 
 const canonicalURL = Astro.url.pathname === '/' ? canonical.origin : canonical;
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, image = '' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -23,6 +23,7 @@ const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
+<link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Font preloads -->
 <link rel="preload" href={ysabeau} as="font" type="font/woff2" crossorigin="anonymous" />
