--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,8 +5,8 @@
  */
 
 :root {
-	--accent: #2337ff;
-	--accent-dark: #000d8a;
+	--accent: #4e4e4e;
+	--accent-dark: #4e4e4e;
 	--black: 15, 18, 25;
 	--gray: 96, 115, 159;
 	--gray-light: 229, 233, 240;
