--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -55,3 +55,6 @@ const { title, description, image = '' } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- Analítica AHrefs -->
+<script src="https://analytics.ahrefs.com/analytics.js" data-key="Gd7jgv9wt5MBRrcy2DWBlQ" async></script>
