--- a/src/pages/[slug]/index.astro
+++ b/src/pages/[slug]/index.astro
@@ -39,7 +39,10 @@ const story = {
   rating: storyData.rating,
   ratingCount: storyData.rating_count,
   categories: storyData.categories,
-} as Story;
+  created: storyData.created_at,
+} as unknown as Story;
+
+const date = new Date(storyData.created_at).toISOString().split('T')[0];
 
 const parsedCategory = JSON.parse(story.categories)[0];
 const matchedCategory = generalCategories.find((cat) => cat.name === parsedCategory) || generalCategories[0];
@@ -50,6 +53,6 @@ const category = {
 const relatedStories = await getRelatedStoriesBySlug(story.slug);
 ---
 
-<Layout title={story.title} description={story.description} slug={story.slug} options={story.options} optionSlug={story.slug} relatedStories={relatedStories} rating={story.rating} ratingCount={story.ratingCount} ratingSlug={story.slug} category={category} >
+<Layout title={story.title} description={story.description} slug={story.slug} options={story.options} optionSlug={story.slug} relatedStories={relatedStories} rating={story.rating} ratingCount={story.ratingCount} ratingSlug={story.slug} category={category} created={date} >
   <div set:html={story.text} />
 </Layout>
