refactor: Fix datePublished and dateModified values in LayoutStory.astro

--- a/src/layouts/LayoutStory.astro
+++ b/src/layouts/LayoutStory.astro
@@ -65,8 +65,8 @@ const genre = category.title.toLowerCase().replace('cuentos de ', '')
       },
       "description": description,
       "image": imageUrl,
-      "datePublished": {created},
-      "dateModified": {created},
+      "datePublished": created,
+      "dateModified": created,
       "genre": [genre],
       "keywords": keywords,
       "inLanguage": "es",
