--- a/src/pages/[slug]/index.astro
+++ b/src/pages/[slug]/index.astro
@@ -51,8 +51,10 @@ const category = {
   slug: matchedCategory.slug,
 };
 const relatedStories = await getRelatedStoriesBySlug(story.slug);
+
+const title = `${story.title} - ${category.title}`;
 ---
 
-<Layout title={story.title} description={story.description} slug={story.slug} options={story.options} optionSlug={story.slug} relatedStories={relatedStories} rating={story.rating} ratingCount={story.ratingCount} ratingSlug={story.slug} category={category} created={date} >
+<Layout title={title} description={story.description} slug={story.slug} options={story.options} optionSlug={story.slug} relatedStories={relatedStories} rating={story.rating} ratingCount={story.ratingCount} ratingSlug={story.slug} category={category} created={date} >
   <div set:html={story.text} />
 </Layout>
